--- a/ipynb/02_Introduzione_a_Python.ipynb
+++ b/ipynb/02_Introduzione_a_Python.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2**2   "
+    "2**2"
    ]
   },
   {
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "9//2"
+    "9 // 2"
    ]
   },
   {
@@ -419,7 +419,7 @@
    },
    "outputs": [],
    "source": [
-    "max(2,-1)"
+    "max(2, -1)"
    ]
   },
   {
@@ -430,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "min(0,13,4)"
+    "min(0, 13, 4)"
    ]
   },
   {
@@ -672,7 +672,7 @@
     "width = 20\n",
     "height = 5 * 9\n",
     "area = width * height\n",
-    "print(\"Area =\",area)"
+    "print(\"Area =\", area)"
    ]
   },
   {
@@ -689,7 +689,7 @@
    "outputs": [],
    "source": [
     "width = 15.7\n",
-    "print(\"width =\",width)"
+    "print(\"width =\", width)"
    ]
   },
   {
@@ -705,9 +705,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Area =\",area)\n",
+    "print(\"Area =\", area)\n",
     "area = width * height\n",
-    "print(\"New Area =\",area)"
+    "print(\"New Area =\", area)"
    ]
   },
   {
@@ -792,8 +792,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Var:',Var)\n",
-    "print('var:',var)"
+    "print('Var:', Var)\n",
+    "print('var:', var)"
    ]
   },
   {
@@ -866,7 +866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 4     \n",
+    "x = 4\n",
     "x = x + 1\n",
     "print(x)"
    ]
@@ -1160,13 +1160,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_sum(a,b):\n",
-    "    \"\"\" \n",
+    "def my_sum(a, b):\n",
+    "    \"\"\"\n",
     "    my_sum calcola la somma di due valori.\n",
     "    a, b   : input\n",
     "    c      : output\n",
     "    \"\"\"\n",
-    "    c = a+b\n",
+    "    c = a + b\n",
     "    return c"
    ]
   },
@@ -1186,7 +1186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = my_sum(4,5)\n",
+    "res = my_sum(4, 5)\n",
     "print(res)"
    ]
   },
@@ -1196,7 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1 = my_sum(3.7,-2.4)\n",
+    "f1 = my_sum(3.7, -2.4)\n",
     "f2 = f1*f1\n",
     "print(f2)"
    ]
@@ -1231,7 +1231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_half_pi():    \n",
+    "def my_half_pi():\n",
     "    return 3.141592653589793/2.\n",
     "\n",
     "print(my_half_pi())"
@@ -1282,8 +1282,8 @@
     "\n",
     "r1,r2 = my_sum_dif(p,q)\n",
     "\n",
-    "print(p,'+',q,'=',r1)\n",
-    "print(p,'-',q,'=',r2)"
+    "print(p, '+', q, '=', r1)\n",
+    "print(p, '-', q, '=', r2)"
    ]
   },
   {
@@ -1302,18 +1302,18 @@
    "source": [
     "import math\n",
     "\n",
-    "def my_sol_eq2(a,b,c):\n",
-    "    disc = math.sqrt(b*b-4.*a*c)\n",
-    "    sol1 = (-b+disc)/2./a\n",
-    "    sol2 = (-b-disc)/2./a\n",
-    "    return sol1,sol2\n",
+    "def my_sol_eq2(a, b, c):\n",
+    "    disc = math.sqrt(b*b - 4.*a*c)\n",
+    "    sol1 = (-b + disc)/2./a\n",
+    "    sol2 = (-b - disc)/2./a\n",
+    "    return sol1, sol2\n",
     "\n",
     "a = 1\n",
     "b = 2\n",
-    "c =1\n",
-    "r1,r2 =  my_sol_eq2(a,b,c)\n",
-    "print('sol+ :',r1)\n",
-    "print('sol2 :',r2)"
+    "c = 1\n",
+    "r1, r2 = my_sol_eq2(a, b, c)\n",
+    "print('sol1 :', r1)\n",
+    "print('sol2 :', r2)"
    ]
   },
   {
@@ -1338,14 +1338,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def returnstars( n ):\n",
+    "def returnstars(n):\n",
     "    return n * '*'\n",
     "\n",
-    "def print_centered_in_stars( string ):\n",
+    "def print_centered_in_stars(string):\n",
     "    linelength = 46 \n",
     "    starstring = returnstars((linelength - len(string)) // 2)\n",
     "\n",
     "    print(starstring + string + starstring)\n",
+    "\n",
     "\n",
     "print_centered_in_stars('Hello world!')"
    ]
@@ -1460,7 +1461,7 @@
    "outputs": [],
    "source": [
     "d = square1(5)\n",
-    "print('Il valore della variabile d è:',d)"
+    "print('Il valore della variabile d è:', d)"
    ]
   },
   {
@@ -1489,7 +1490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "square2(3) #"
+    "square2(3)"
    ]
   },
   {
@@ -1499,7 +1500,7 @@
    "outputs": [],
    "source": [
     "d = square2(5)\n",
-    "print('Il valore della variabile d è:',d)"
+    "print('Il valore della variabile d è:', d)"
    ]
   },
   {
@@ -1518,8 +1519,8 @@
     "def square3(a):\n",
     "    sq = a*a\n",
     "\n",
-    "d=square3(3)\n",
-    "print('La funzione square3 restituisce:',d)"
+    "d = square3(3)\n",
+    "print('La funzione square3 restituisce:', d)"
    ]
   },
   {
@@ -1606,7 +1607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "volume = cube(lato)      "
+    "volume = cube(lato)"
    ]
   },
   {
