--- a/ipynb/04_control-flow.ipynb
+++ b/ipynb/04_control-flow.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for animal in ['dog','cat','mouse']:\n",
+    "for animal in ['dog', 'cat', 'mouse']:\n",
     "    print(animal, animal.upper())"
    ]
   },
@@ -174,7 +174,7 @@
    "source": [
     "import math\n",
     "a =[]     # lista vuota\n",
-    "for i in range(5,10):\n",
+    "for i in range(5, 10):\n",
     "    a.append(math.sin(i*math.pi/2))\n",
     "    \n",
     "print(a)"
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, animal in enumerate(['dog','cat','mouse']):\n",
+    "for i, animal in enumerate(['dog', 'cat', 'mouse']):\n",
     "    print(animal*(i+1))"
    ]
   },
@@ -296,15 +296,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "people = [\"Hans\",\"Andy C\",\"Ken\"]\n",
-    "rooms  = [\"room 1033\",\"room 1031\",\"room 1027\"]\n",
+    "people = [\"Hans\", \"Andy C\", \"Ken\"]\n",
+    "rooms = [\"room 1033\", \"room 1031\", \"room 1027\"]\n",
     "\n",
-    "#possible inconsistency here since we have two lists\n",
-    "if not len( people ) == len( rooms ):\n",
+    "# possible inconsistency here since we have two lists\n",
+    "if not len(people) == len(rooms):\n",
     "    raise RuntimeError(\"people and rooms differ in length\")\n",
     "\n",
-    "for i in range( len( rooms ) ):\n",
-    "    print(people[i],\"works in\",rooms[i])"
+    "for i in range(len(rooms)):\n",
+    "    print(people[i], \"works in\", rooms[i])"
    ]
   },
   {
@@ -323,8 +323,8 @@
     "a = []\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
-    "        a.append(i+10*j)\n",
-    "        \n",
+    "        a.append(i + 10*j)\n",
+    "\n",
     "print(a)"
    ]
   },
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[ i + 10*j for i in range(3) for j in range(3)]"
+    "[i + 10*j for i in range(3) for j in range(3)]"
    ]
   },
   {
@@ -363,10 +363,10 @@
    "source": [
     "for i in range(3):\n",
     "    for j in range(4):\n",
-    "        print('index i:',i)\n",
-    "        print('index j:',j)\n",
-    "        res = 10*i +j\n",
-    "        print('10*i + j:',res,'\\n')\n"
+    "        print('index i:', i)\n",
+    "        print('index j:', j)\n",
+    "        res = 10*i + j\n",
+    "        print('10*i + j:', res, '\\n')\n"
    ]
   },
   {
@@ -427,6 +427,7 @@
     "while mymoney < 200:  # ripeti fino a raggiungere 200 euro\n",
     "    mymoney = mymoney * growth_factor\n",
     "    years = years + 1\n",
+    "\n",
     "print('We need', years, 'years to reach', mymoney, 'euros.')"
    ]
   },
@@ -443,9 +444,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r0 = 1.\n",
-    "r2 =1/2\n",
-    "n=1\n",
+    "r0 = 1.0\n",
+    "r2 = 1/2\n",
+    "n = 1\n",
     "\n",
     "while r0 - r2 != r0:\n",
     "    r2 = r2/2\n",
@@ -468,8 +469,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(1.-1/2**(n-1))\n",
-    "print(1.-1/2**n)"
+    "print(1.0 - 1/2**(n-1))\n",
+    "print(1.0 - 1/2**n)"
    ]
   },
   {
@@ -508,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_list = list(range(5,20))\n",
+    "my_list = list(range(5, 20))\n",
     "my_list"
    ]
   },
@@ -610,7 +611,7 @@
    "outputs": [],
    "source": [
     "a = 3\n",
-    "my_list = [5,3,-1,'pie']\n",
+    "my_list = [5, 3, -1, 'pie']\n",
     "a in my_list"
    ]
   },
@@ -636,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = [1,2,3]\n",
+    "l = [1, 2, 3]\n",
     "print(l[44])"
    ]
   },
@@ -694,9 +695,9 @@
    "outputs": [],
    "source": [
     "for letter in 'Python':     # Primo Esempio\n",
-    "   if letter == 'h':\n",
-    "      break\n",
-    "   print ('Current Letter :', letter)"
+    "    if letter == 'h':\n",
+    "        break\n",
+    "    print ('Current Letter:', letter)"
    ]
   },
   {
@@ -705,13 +706,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "  \n",
     "var = 10                    # Secondo Esempio\n",
-    "while var > 0:              \n",
-    "   print ('Current variable value :', var)\n",
-    "   var = var -1\n",
-    "   if var == 5:\n",
-    "      break\n",
+    "while var > 0:\n",
+    "    print ('Current variable value :', var)\n",
+    "    var = var - 1\n",
+    "    if var == 5:\n",
+    "        break\n",
     "\n",
     "print (\"Good bye!\")"
    ]
@@ -730,9 +730,9 @@
    "outputs": [],
    "source": [
     "for letter in 'Python':\n",
-    "   if letter == 'h':\n",
-    "      continue\n",
-    "   print ('Current Letter :', letter)\n"
+    "    if letter == 'h':\n",
+    "        continue\n",
+    "    print ('Current Letter:', letter)\n"
    ]
   },
   {
