--- a/ipynb/05_input-output-files.ipynb
+++ b/ipynb/05_input-output-files.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# sostituendo il simbolo di 'a capo' (\\n) con uno spazio nel primo statement'\n",
-    "print(\"Printing in line one\",end=\" \")\n",
+    "print(\"Printing in line one\", end=\" \")\n",
     "print(\"...still printing in line one (now it works).\")"
    ]
   },
@@ -311,8 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Table = [[1,2,3],[5,6,7],[8,9,10]]\n",
-    "info = [\"dato 1\",\"dato 2\",\"dato 3\"]\n",
+    "Table = [[1, 2, 3], [5, 6 ,7], [8, 9, 10]]\n",
+    "info = [\"dato 1\", \"dato 2\", \"dato 3\"]\n",
     "print(f\"{info[0]:>8s} {info[1]:>8s} {info[2]:>8s}\")\n",
     "print(30*'-')\n",
     "for i in range(len(Table)):\n",
@@ -333,8 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Table = [[1,2,3],[5,6,7],[8,9,10]]\n",
-    "info = [\"dato 1\",\"dato 2\",\"dato 3\"]\n",
+    "Table = [[1, 2, 3], [5, 6, 7], [8, 9, 10]]\n",
+    "info = [\"dato 1\", \"dato 2\", \"dato 3\"]\n",
     "print(34*'-')\n",
     "print(f\"| {info[0]:>8s} | {info[1]:>8s} | {info[2]:>8s} |\")\n",
     "print(34*'-')\n",
@@ -358,8 +358,8 @@
    },
    "outputs": [],
    "source": [
-    "Table = [[1,2,3],[5,6,7],[8,9,10]]\n",
-    "info = [\"dato 1\",\"dato 2\",\"dato 3\"]\n",
+    "Table = [[1, 2, 3], [5, 6, 7], [8, 9, 10]]\n",
+    "info = [\"dato 1\", \"dato 2\", \"dato 3\"]\n",
     "print(34*'-')\n",
     "print(f\"| {info[0]:8s} | {info[1]:^8s} | {info[2]:>8s} |\")\n",
     "print(34*'-')\n",
@@ -382,8 +382,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Table = [[1.2,2,3.14],[-5.0,6.17,7],[8,9,10]]\n",
-    "info = [\"dato 1\",\"dato 2\",\"dato3\"]\n",
+    "Table = [[1.2, 2, 3.14], [-5.0, 6.17, 7], [8, 9, 10]]\n",
+    "info = [\"dato 1\", \"dato 2\", \"dato3\"]\n",
     "print(f\"{info[0]:>12s} {info[1]:>12s} {info[1]:>12s}\")\n",
     "print(42*'-')\n",
     "for i in range(len(Table)):\n",
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"{} needs {} pints\".format('Peter',4))"
+    "print(\"{} needs {} pints\".format('Peter', 4))"
    ]
   },
   {
@@ -457,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"{name} needs {number} pints\".format(name='Peter',number=4))"
+    "print(\"{name} needs {number} pints\".format(name = 'Peter', number = 4))"
    ]
   },
   {
@@ -531,11 +531,9 @@
     "\n",
     "Ecco un programmma che\n",
     "\n",
-    "1.  crea un file di nome `test.txt`,\n",
-    "\n",
-    "2.  scrive del testo nel file,\n",
-    "\n",
-    "4. chiude il file.\n"
+    "1. crea un file di nome `test.txt`\n",
+    "2.  scrive del testo nel file\n",
+    "4. chiude il file."
    ]
   },
   {
@@ -543,7 +541,6 @@
    "metadata": {},
    "source": [
     "I dati che vengono immagazzinati nel file `test.txt` sono:\n",
-    "\n",
     "```\n",
     "Writing text to file. This is the first line.\n",
     "And the second line.\n",
@@ -557,10 +554,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Scrivere in un file\n",
     "out_file = open(\"test.txt\", \"w\")          # Il file viene aperto/creato in scrittura.\n",
     "                                          # 'w' vuol dire write.\n",
-    "out_file.write(\"Writing text to file. This is the first line.\\n\"+\\\n",
+    "out_file.write(\"Writing text to file. This is the first line.\\n\" + \\\n",
     "               \"And the second line.\\n Third line!!!!!!!\")\n",
     "# Il singolo carattere \"\\n\" segnala la fine di una riga. Vuol dire \"a capo\".\n",
     "out_file.close()                          # chiude il file"
@@ -572,13 +568,10 @@
    "source": [
     "La cella seguente\n",
     "\n",
-    "1. apre il file di nome `test.txt`,\n",
-    "\n",
-    "2.  legge il testo dal file,\n",
-    "\n",
-    "3.  stampa il testo sullo schermo.\n",
-    "\n",
-    "4. chiude il file"
+    "1. apre il file di nome `test.txt`\n",
+    "2. legge il testo dal file,\n",
+    "3. chiude il file\n",
+    "4. stampa il testo sullo schermo. "
    ]
   },
   {
@@ -587,21 +580,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
-    "# 2. Leggere dal file\n",
     "in_file = open(\"test.txt\", \"r\")           # Il file viene aperto in lettura. 'r' vuol dire read.\n",
     "text = in_file.read()                     # Legge tutto il file in una variabile \"text\" di \n",
     "                                          # tipo stringa\n",
-    "in_file.close()                           # chiude il file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Mostrare i dati\n",
+    "in_file.close()                           # chiude il file\n",
+    "\n",
     "print(text)"
    ]
   },
@@ -624,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo write non aggiunge il carattere `newline (\\n)` alla fine di ogni operazione di scrittura"
+    "Il metodo `write` non aggiunge il carattere `newline (\\n)` alla fine di ogni operazione di scrittura"
    ]
   },
   {
@@ -691,9 +674,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### fileobject.read()\n",
-    "\n",
-    "Il metodo `fileobject.read()` legge tutto il file, e lo restituisce come una singola stringa (inclusi i caratteri di \"a capo\" `\\n`)."
+    "Il metodo `read()` legge tutto il file, e lo restituisce come una singola stringa (inclusi i caratteri di \"a capo\" `\\n`)."
    ]
   },
   {
@@ -703,7 +684,7 @@
    "outputs": [],
    "source": [
     "f = open('myfile.txt', 'r')\n",
-    "f.read()"
+    "text = f.read()"
    ]
   },
   {
@@ -712,16 +693,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()"
+    "f.close()\n",
+    "print(text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### fileobject.readlines()\n",
-    "\n",
-    "Il metodo `fileobject.readlines()` restituisce una lista di stringhe, in cui ciascun elemento della lista corrisponde a una linea del file:"
+    "Il metodo `readlines()` restituisce una lista di stringhe, in cui ciascun elemento della lista corrisponde a una linea del file:"
    ]
   },
   {
@@ -731,7 +711,7 @@
    "outputs": [],
    "source": [
     "f = open('myfile.txt', 'r')\n",
-    "f.readlines()"
+    "text = f.readlines()"
    ]
   },
   {
@@ -740,7 +720,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()"
+    "f.close()\n",
+    "print(text)"
    ]
   },
   {
@@ -846,7 +827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('myfile.txt',\"r\") as f:\n",
+    "with open('myfile.txt', \"r\") as f:\n",
     "    for line in f:\n",
     "        print(f\"{len(line)} characters\")"
    ]
@@ -891,7 +872,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"/Users/maina/cernbox/python/MyCourse/path_test_dir/pippo1.txt\",\"r\") as filein:\n",
+    "with open(r\"/Users/maina/cernbox/python/MyCourse/path_test_dir/pippo1.txt\", \"r\") as filein:\n",
     "    for line in filein:\n",
     "        print(f\"{line} :: {len(line)} characters\")"
    ]
@@ -910,9 +891,9 @@
    "outputs": [],
    "source": [
     "lines = [\"pippo\", \"pluto\", \"non c'è trippa per gatti\"]\n",
-    "with open(r\"/Users/maina/cernbox/python/MyCourse/path_test_dir/pippo2.txt\",\"w\") as fileout:\n",
+    "with open(r\"/Users/maina/cernbox/python/MyCourse/path_test_dir/pippo2.txt\", \"w\") as fileout:\n",
     "    for line in lines:\n",
-    "        fileout.write(line+\"\\n\")"
+    "        fileout.write(line + \"\\n\")"
    ]
   },
   {
@@ -928,10 +909,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = open(r\"/Users/maina/cernbox/python/MyCourse/path_test_dir/pippo2.txt\",\"r\")\n",
+    "test = open(r\"/Users/maina/cernbox/python/MyCourse/path_test_dir/pippo2.txt\", \"r\")\n",
     "res = test.read()\n",
-    "print(res)\n",
-    "res"
+    "print(res)"
    ]
   },
   {
@@ -947,7 +927,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"../path_test_dir/pippo1.txt\",\"r\") as filein:\n",
+    "with open(r\"../path_test_dir/pippo1.txt\", \"r\") as filein:\n",
     "    for line in filein:\n",
     "        print(f\"{line} :: {len(line)} characters\")"
    ]
