--- a/ipynb/06_funzioni_moduli.ipynb
+++ b/ipynb/06_funzioni_moduli.ipynb
@@ -64,7 +64,8 @@
    "source": [
     "def power2and3(x):\n",
     "    \"\"\"Returns the tuple (x**2, x**3)\"\"\"\n",
-    "    return x**2 ,x**3\n",
+    "    return x**2, x**3\n",
+    "\n",
     "\n",
     "res = power2and3(2)\n",
     "print(res)"
@@ -108,14 +109,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def returnstars( n ):\n",
+    "def returnstars(n):\n",
     "    return n * '*'\n",
+    "\n",
     "\n",
     "def print_centered_in_stars( string ):\n",
     "    linelength = 46 \n",
     "    starstring = returnstars((linelength - len(string)) // 2)\n",
     "\n",
     "    print(starstring + string + starstring)\n",
+    "\n",
     "\n",
     "print_centered_in_stars('Hello world!')"
    ]
@@ -183,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(myfunc(p=3, debug=True, x=7))    "
+    "print(myfunc(p=3, debug=True, x=7))"
    ]
   },
   {
@@ -208,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(myfunc(p=3, debug=True))  "
+    "print(myfunc(p=3, debug=True))"
    ]
   },
   {
@@ -273,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "en = (3,4,5,6,7,8)"
+    "en = (3, 4, 5, 6, 7, 8)"
    ]
   },
   {
@@ -301,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a,b,c,d,e,f = en\n",
+    "a, b, c, d, e, f = en\n",
     "print(f\"c:{c}, a:{a}\")"
    ]
   },
@@ -342,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a,*b = [1]\n",
+    "a, *b = [1]\n",
     "print(f\"a = {a}, b = {b}\")"
    ]
   },
@@ -359,9 +362,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = [1,3,5]\n",
-    "b = (7.3,8.1)\n",
-    "c = [*a,*b]\n",
+    "a = [1, 3, 5]\n",
+    "b = (7.3, 8.1)\n",
+    "c = [*a, *b]\n",
     "print(c)"
    ]
   },
@@ -395,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chiamata alla funzione con due argomenti \n",
+    "# Chiamata alla funzione con due argomenti\n",
     "show_countries('America', 'Canada')"
    ]
   },
@@ -405,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chiamata alla funzione con tre argomenti \n",
+    "# Chiamata alla funzione con tre argomenti\n",
     "show_countries('America', 'Canada', 'Mexico')"
    ]
   },
@@ -458,7 +461,7 @@
    "outputs": [],
    "source": [
     "def mySum(*args):\n",
-    "\treturn sum(args)\n",
+    "    return sum(args)\n",
     "\n",
     "# Chiamata\n",
     "print(mySum(1, 2, 3, 4, 5))\n",
@@ -480,7 +483,7 @@
    "source": [
     "# Una semplice funzione che prende tre argomenti e li stampa\n",
     "def fun1(a, b, c):\n",
-    "\tprint(a, b, c)\n",
+    "    print(a, b, c)\n",
     "\n",
     "# arg_list viene spacchettato (in questo caso deve contenere esattamente tre elementi)\n",
     "# e il suo contenuto viene passato a fun1\n",
@@ -505,11 +508,12 @@
     "def fun2(*args):\n",
     "    # La ntupla args viene convertita in lista per poterne modificare gli elementi\n",
     "    args = list(args)\n",
-    "\t# Gli elementi vengono modificati. Devono essere presenti almeno due elementi\n",
+    "    # Gli elementi vengono modificati. Devono essere presenti almeno due elementi\n",
     "    args[0] = 'Greetings,'\n",
     "    args[1] = 'awesome'\n",
     "    return args\n",
     " \n",
+    "\n",
     "output = fun2('Hello', 'beautiful', 'world!', 'Today','is', 'gorgeous.')\n",
     "print(output)"
    ]
@@ -690,7 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_unione3 = { **d2a, **d1}\n",
+    "d_unione3 = {**d2a, **d1}\n",
     "print(d_unione3)"
    ]
   },
@@ -709,18 +713,18 @@
    "outputs": [],
    "source": [
     "def genfun(*args,**kwargs):\n",
-    "    for i,arg in enumerate(args):\n",
-    "        print('index:', i,'value:',arg)\n",
+    "    for i, arg in enumerate(args):\n",
+    "        print('index:', i, 'value:', arg)\n",
     "    print('---------------')\n",
-    "    for (key,value) in kwargs.items():\n",
-    "        print('key:',key,'  ','value:',value)\n",
-    "    \n",
+    "    for (key, value) in kwargs.items():\n",
+    "        print('key:', key, '  ', 'value:', value)\n",
+    "\n",
     "# Argomenti\n",
-    "positional_args = (10,20,30)\n",
+    "positional_args = (10, 20, 30)\n",
     "keyword_args = {'pippo':'cane', 'minnie':'topo'} # Le chiavi devono obbligatoriamente essere stringhe \n",
     "\n",
     "# Chiamata\n",
-    "genfun(*positional_args,**keyword_args)"
+    "genfun(*positional_args, **keyword_args)"
    ]
   },
   {
@@ -752,6 +756,7 @@
     "    for i in range(len(l)):\n",
     "        l[i] = l[i] * 2\n",
     "    print(f\"in double_the_values: changed l to l = {l}\")\n",
+    "\n",
     "\n",
     "l_global = [0, 1, 2, 3, 10]\n",
     "print(f\"In main: s = {l_global}\")\n",
@@ -794,6 +799,7 @@
     "    l = l + l\n",
     "    print(f\"in double_the_list: changed l to l = {l}\")\n",
     "\n",
+    "\n",
     "l_global = \"Hello\"\n",
     "print(f\"In main: s = {l_global}\")\n",
     "double_the_list(l_global)\n",
@@ -814,7 +820,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l_global = [1,2]\n",
+    "l_global = [1, 2]\n",
     "print(f\"In main: s = {l_global}\")\n",
     "double_the_list(l_global)\n",
     "print(f\"In main: s = {l_global}\")"
@@ -833,7 +839,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def double_the_value(l):\n",
+    "def double_the_values(l):\n",
     "    print(f\"in double_the_values: l = {l}\")\n",
     "    l = 2 * l\n",
     "    print(f\"in double_the_values: changed l to l = {l}\")\n",
@@ -841,7 +847,7 @@
     "# 42 è immutabile\n",
     "l_global = 42\n",
     "print(f\"In main: s = {l_global}\")\n",
-    "double_the_value(l_global)\n",
+    "double_the_values(l_global)\n",
     "print(f\"In main: s = {l_global}\")"
    ]
   },
@@ -875,14 +881,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sum(a,b):\n",
-    "    return a+b\n",
+    "def sum(a, b):\n",
+    "    return a + b\n",
     "\n",
-    "def product(a,b):\n",
+    "def product(a, b):\n",
     "    return a*b\n",
     "\n",
-    "def operation(f,a,b):\n",
-    "    return f(a,b)"
+    "def operation(f, a, b):\n",
+    "    return f(a, b)"
    ]
   },
   {
@@ -891,7 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "operation(sum,3,6)"
+    "operation(sum, 3, 6)"
    ]
   },
   {
@@ -900,7 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "operation(product,3,6)"
+    "operation(product, 3, 6)"
    ]
   },
   {
@@ -937,7 +943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questo introduce il nome `math` nel namespace del processo in cui il comando import è stato eseguito. I nomi delle funzioni contenute nel modulo `math` non vengono introdotti nel namespace: devono essere invocati attraverso il nome `math`. Per: `math.sin`."
+    "Questo introduce il nome `math` nel namespace del processo in cui il comando import è stato eseguito. I nomi delle funzioni contenute nel modulo `math` non vengono introdotti nel namespace: devono essere invocati attraverso il nome `math`. Per esempio: `math.sin`."
    ]
   },
   {
@@ -964,7 +970,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "import cmath\n"
+    "import cmath"
    ]
   },
   {
@@ -993,7 +999,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questo comando importa la funzione `sin` dal modulo `math`, ma non introduce il nome `math` nel namespace. Introduce solo il nome `sin`. È possibile importare più nome con un solo comando:"
+    "Questo comando importa la funzione `sin` dal modulo `math`, ma non introduce il nome `math` nel namespace. Introduce solo il nome `sin`. È possibile importare più funzioni con un solo comando:"
    ]
   },
   {
@@ -1034,7 +1040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In genere si evita di importare singole funzioni da un modulo per evitare possibili conflitti. Per esempio una funzione `sin` esiste anche in Numpy. Se questa venisse importata con `from numpy import sin` maschererebbe la funzione importata in precedenza da `math`. Provate a farlo e poi eseguite `help(sin)`."
+    "In genere si evita di importare singole funzioni da un modulo per evitare possibili conflitti. Per esempio una funzione `sin` esiste anche in `numpy`. Se questa venisse importata con `from numpy import sin` maschererebbe la funzione importata in precedenza da `math`. Provate a farlo e poi eseguite `help(sin)`."
    ]
   },
   {
@@ -1188,25 +1194,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Nozioni più avanzate: importare un modulo usando il full path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib.util\n",
-    "spec = importlib.util.spec_from_file_location(\"module1\", \"/Users/maina/python/MyCourse2/ShellPrograms/module1.py\")\n",
-    "foo = importlib.util.module_from_spec(spec)\n",
-    "spec.loader.exec_module(foo)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 6.6.3 Uso di \\_\\_name\\_\\_\n",
     "\n",
     "Riassumendo,\n",
@@ -1313,6 +1300,7 @@
    "source": [
     "def primes5():\n",
     "    return (2, 3, 5, 7, 11)\n",
+    "\n",
     "\n",
     "for p in primes5():\n",
     "    print(f\"{p}\", end=' ')"
@@ -1488,18 +1476,11 @@
     "- Questo approccio è utile per eseguire il \"regression testing\" e per promuovere la riusabilità delle funzioni.\n",
     "\n",
     "### Eseguire un comando o uno script dallo shell di Python\n",
-    "- Per lanciare lo shell di Python, si usa il comando `$ python`.\n",
+    "- Per lanciare lo shell di Python, si usa il comando `python`.\n",
     "- Python è un linguaggio interpretato: esegue i comandi inseriti immediatamente, utile per testare rapidamente funzionalità.\n",
     "- È possibile eseguire script Python sia dalla linea di comando in modalità interattiva che normale.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
