--- a/ipynb/08_plots.ipynb
+++ b/ipynb/08_plots.ipynb
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(8, 5))\n",
-    "print('fig:',type(fig))\n",
-    "print(' ax:',type(ax))"
+    "print('fig:', type(fig))\n",
+    "print(' ax:', type(ax))"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax_1,ax_2) = plt.subplots(nrows=1, ncols=2, figsize=(8, 5))"
+    "fig, (ax_1, ax_2) = plt.subplots(nrows=1, ncols=2, figsize=(8, 5))"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax_1,ax_2) = plt.subplots(nrows=2, ncols=1, figsize=(8, 5))"
+    "fig, (ax_1, ax_2) = plt.subplots(nrows=2, ncols=1, figsize=(8, 5))"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "fig1, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(8, 5))\n",
-    "ax1.plot(np.array([1,2,4,3]))   # Valori dell'ordinata. I valori dell'ascissa sono impliciti."
+    "ax1.plot(np.array([1, 2, 4, 3]))   # Valori dell'ordinata. I valori dell'ascissa sono impliciti."
    ]
   },
   {
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "fig1, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(8, 5))\n",
-    "ax1.plot(np.array([1,2,3,4]),np.array([1,4,9,16]))    # Valori dell'ascissa. Valori dell'ordinata."
+    "ax1.plot(np.array([1, 2, 3, 4]),np.array([1, 4, 9, 16]))    # Valori dell'ascissa. Valori dell'ordinata."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "outputs": [],
    "source": [
     "fig1, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(8, 5))\n",
-    "ax1.scatter(np.array([1,2,3,4]),np.array([1,4,9,16]))    # Valori dell'ascissa. Valori dell'ordinata."
+    "ax1.scatter(np.array([1, 2, 3, 4]),np.array([1, 4, 9, 16]))    # Valori dell'ascissa. Valori dell'ordinata."
    ]
   },
   {
@@ -161,7 +161,7 @@
     "ax2.set_ylabel('some function')\n",
     "ax2.set_xlabel('Some variable')\n",
     "ax2.set_title('ScatterPlot 1')\n",
-    "ax2.scatter(np.array([1,2,3,4]),np.array([1,4,9,16]), marker='s', c='0') "
+    "ax2.scatter(np.array([1, 2, 3, 4]), np.array([1, 4, 9, 16]), marker='s', c='0') "
    ]
   },
   {
@@ -174,7 +174,7 @@
     "ax2.set_ylabel('y')\n",
     "ax2.set_xlabel('x')\n",
     "ax2.set_title('Plot 1')\n",
-    "ax2.plot(np.array([1,2,3,4]),np.array([1,4,9,16]), linestyle='dashed', color='red') "
+    "ax2.plot(np.array([1, 2, 3, 4]), np.array([1, 4, 9, 16]), linestyle='dashed', color='red') "
    ]
   },
   {
@@ -192,9 +192,9 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "ax.plot(np.array([1,2,3,4]),np.array([1,4,9,16]), c='b', label='g1')\n",
-    "ax.set_xlim(-1.,2.5)\n",
-    "ax.set_ylim(-1.5,10.)"
+    "ax.plot(np.array([1, 2, 3, 4]), np.array([1, 4, 9, 16]), c='b', label='g1')\n",
+    "ax.set_xlim(-1., 2.5)\n",
+    "ax.set_ylim(-1.5, 10.)"
    ]
   },
   {
@@ -213,8 +213,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "x = np.linspace(0,4,201)\n",
-    "ax.plot(x,x*x)\n",
+    "x = np.linspace(0, 4, 201)\n",
+    "ax.plot(x, x*x)\n",
     "ax.grid()"
    ]
   },
@@ -241,10 +241,10 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "x = np.linspace(-2,2,201)\n",
-    "ax.plot(x,x**3)\n",
-    "ax.hlines(1.,-2.,2.,colors='r')   # coordinata y, estremo sinistro, estremo destro\n",
-    "ax.vlines(-1.,-6.,4.,colors='0')  # coordinata x, estremo inferiore, estremo superiore\n",
+    "x = np.linspace(-2, 2, 201)\n",
+    "ax.plot(x, x**3)\n",
+    "ax.hlines(1., -2., 2., colors='r')   # coordinata y, estremo sinistro, estremo destro\n",
+    "ax.vlines(-1., -6., 4., colors='0')  # coordinata x, estremo inferiore, estremo superiore\n",
     "ax.grid()"
    ]
   },
@@ -270,17 +270,18 @@
     "def my_f(x):\n",
     "    return 2*x**3 + 3*x**2 - 12*x -10\n",
     "\n",
-    "xval = np.arange(-4,3,0.1)\n",
+    "\n",
+    "xval = np.arange(-4, 3, 0.1)\n",
     "yval = my_f(xval)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(8,6))\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
     "ax.set_xlabel('x coordinate')\n",
     "ax.set_ylabel('my_f(x)')\n",
     "ax.set_title('Plot of my_f')\n",
     "ax.grid()\n",
     "\n",
-    "ax.plot(xval,yval); # Il ; alla fine del comando plot elimina la stampa della locazione in memoria del plot"
+    "ax.plot(xval, yval); # Il ; alla fine del comando plot elimina la stampa della locazione in memoria del plot"
    ]
   },
   {
@@ -316,9 +317,9 @@
     "t = np.arange(0.0, 2*np.pi, 0.01)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 5))\n",
-    "ax.plot(t,np.cos(t),c='r')\n",
-    "ax.plot(t,np.cos(2*t),c='b')\n",
-    "ax.plot(t,np.cos(10*t),c='g')"
+    "ax.plot(t, np.cos(t), c='r')\n",
+    "ax.plot(t, np.cos(2*t), c='b')\n",
+    "ax.plot(t, np.cos(10*t), c='g')"
    ]
   },
   {
@@ -339,19 +340,21 @@
    "source": [
     "def f(t):\n",
     "    return np.exp(-t) * np.cos(2*np.pi*t)\n",
+    "\n",
+    "\n",
     "t1 = np.arange(0.0, 5.0, 0.1)\n",
     "t2 = np.arange(0.0, 5.0, 0.02)\n",
     "\n",
-    "fig3, (ax3a,ax3b) = plt.subplots(nrows=1, ncols=2, figsize=(14, 5))\n",
+    "fig3, (ax3a, ax3b) = plt.subplots(nrows=1, ncols=2, figsize=(14, 5))\n",
     "\n",
-    "ax3a.plot(t1, f(t1),  marker='o', c='b')\n",
-    "ax3a.set_xlabel('x value') \n",
-    "ax3a.set_ylabel('f(x)') \n",
+    "ax3a.plot(t1, f(t1), marker='o', c='b')\n",
+    "ax3a.set_xlabel('x value')\n",
+    "ax3a.set_ylabel('f(x)')\n",
     "ax3a.set_title('Plot 1')\n",
     "\n",
-    "ax3b.plot(t2, np.cos(2*np.pi*t2),  linestyle='--', c='r')\n",
-    "ax3b.set_xlabel('x value') \n",
-    "ax3b.set_ylabel('cos(2 pi x)') \n",
+    "ax3b.plot(t2, np.cos(2*np.pi*t2), linestyle='--', c='r')\n",
+    "ax3b.set_xlabel('x value')\n",
+    "ax3b.set_ylabel('cos(2 pi x)')\n",
     "ax3b.set_title('Plot 2')\n",
     "\n",
     "fig3.tight_layout()\n",
@@ -375,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ((ax1,ax2),(ax3,ax4)) = plt.subplots(nrows=2, ncols=2)"
+    "fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(nrows=2, ncols=2)"
    ]
   },
   {
@@ -392,7 +395,7 @@
    "outputs": [],
    "source": [
     "fig1, my_ax = plt.subplots(nrows=2, ncols=2)\n",
-    "my_ax[0,1].plot(np.array([1,2,3])) "
+    "my_ax[0, 1].plot(np.array([1, 2, 3])) "
    ]
   },
   {
@@ -409,8 +412,8 @@
    "outputs": [],
    "source": [
     "fig1, my_ax = plt.subplots(nrows=2, ncols=2)\n",
-    "my_ax[0,1].plot(np.array([1,2,3]))\n",
-    "my_ax[0,1].set_title(\"One line\")\n",
+    "my_ax[0, 1].plot(np.array([1, 2, 3]))\n",
+    "my_ax[0, 1].set_title(\"One line\")\n",
     "plt.suptitle(\"Four Plots with one line\");\n",
     "fig1.tight_layout()"
    ]
@@ -463,25 +466,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig4, (ax4a,ax4b) = plt.subplots(nrows=1, ncols=2, figsize=(14, 7))\n",
+    "fig4, (ax4a, ax4b) = plt.subplots(nrows=1, ncols=2, figsize=(14, 7))\n",
     "\n",
     "t = np.arange(0.01, 20.0, 0.01)\n",
     "\n",
     "# log y axis\n",
     "ax4a.set_yscale('log')\n",
     "ax4a.plot(t, np.exp(-t/5.0))\n",
-    "ax4a.set_xlabel('x value') \n",
-    "ax4a.set_ylabel('exp(-t/5.0)') \n",
+    "ax4a.set_xlabel('x value')\n",
+    "ax4a.set_ylabel('exp(-t/5.0)')\n",
     "ax4a.set_title('semilogy')\n",
-    "ax4a.grid(visible=True,which='both')   \n",
+    "ax4a.grid(visible=True, which='both')\n",
     "\n",
     "# log x axis\n",
     "ax4b.set_xscale('log')\n",
     "ax4b.plot(t, np.sin(2*np.pi*t))\n",
-    "ax4b.set_xlabel('x value') \n",
-    "ax4b.set_ylabel('sin(2*pi*t)') \n",
+    "ax4b.set_xlabel('x value')\n",
+    "ax4b.set_ylabel('sin(2*pi*t)')\n",
     "ax4b.set_title('semilogx')\n",
-    "ax4b.grid(visible=True,which='both')\n"
+    "ax4b.grid(visible=True, which='both')\n"
    ]
   },
   {
@@ -501,11 +504,11 @@
     "\n",
     "fig5, ax5 = plt.subplots(nrows=1, ncols=1, figsize=(7, 7))\n",
     "\n",
-    "ax5.set_xscale('log',base=2)\n",
+    "ax5.set_xscale('log', base=2)\n",
     "ax5.set_yscale('log')\n",
-    "ax5.plot(t,t,c='r')\n",
-    "ax5.plot(t,t**2,c='b')\n",
-    "ax5.grid(visible=True,which='both')\n",
+    "ax5.plot(t, t, c='r')\n",
+    "ax5.plot(t, t**2, c='b')\n",
+    "ax5.grid(visible=True, which='both')\n",
     "ax5.set_title('loglog base 2 on x')"
    ]
   },
@@ -524,20 +527,20 @@
    "source": [
     "t = np.arange(0.01, 10.0, 0.01)\n",
     "\n",
-    "fig6, (ax6a,ax6b) = plt.subplots(nrows=1, ncols=2, figsize=(10, 6))\n",
+    "fig6, (ax6a, ax6b) = plt.subplots(nrows=1, ncols=2, figsize=(10, 6))\n",
     "\n",
-    "ax6a.plot(t,t,c='r')\n",
-    "ax6a.plot(t,t**2,c='b')\n",
-    "ax6a.plot(t,t**4)\n",
+    "ax6a.plot(t, t, c='r')\n",
+    "ax6a.plot(t, t**2, c='b')\n",
+    "ax6a.plot(t, t**4)\n",
     "ax6a.set_title('linear')\n",
-    "ax6a.grid(visible=True,which='both')\n",
+    "ax6a.grid(visible=True, which='both')\n",
     "\n",
     "ax6b.set_yscale('log')\n",
-    "ax6b.plot(t,t,c='r')\n",
-    "ax6b.plot(t,t**2,c='b')\n",
-    "ax6b.plot(t,t**4)\n",
+    "ax6b.plot(t, t, c='r')\n",
+    "ax6b.plot(t, t**2, c='b')\n",
+    "ax6b.plot(t, t**4)\n",
     "ax6b.set_title('y-log')\n",
-    "ax6b.grid(visible=True,which='both')"
+    "ax6b.grid(visible=True, which='both')"
    ]
   },
   {
@@ -568,11 +571,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dati = np.array([1.95,1.96,1.9,1.9,1.84,1.81,2.06,1.99,1.93,1.97,2.02,1.92,1.95,1.88,1.87,2.03,1.85,2.08,1.96,1.81,\n",
-    "                2.07,1.91,1.79,1.99,1.97,1.95,1.96,1.93,1.83,2.09,2.02,2.09,1.84,1.86,1.96,2.03,1.93,1.9,1.94,1.87,\n",
-    "                1.97,1.91,1.87,1.81,2.06,2.02,1.96,1.81,1.93,2.03,1.92,1.96,1.8,1.95,1.9,2.02,2.03,1.9,2.03,2.02,\n",
-    "                1.96,1.9,1.98,1.87,1.9,1.89,1.84,2.06,1.93,2.06,1.93,1.93,1.9,1.9,1.9,1.93,1.86,1.83,1.96,1.81,2.03,\n",
-    "                1.98,1.84,1.86,1.96,1.81,1.98,1.84,1.86,1.96,1.92,1.96,1.85,2.04,2,1.92,1.9,2.15,1.94,1.92])"
+    "dati = np.array([1.95, 1.96, 1.90, 1.90, 1.84, 1.81, 2.06, 1.99, 1.93, 1.97, 2.02, 1.92,\n",
+    "                 1.95, 1.88, 1.87, 2.03, 1.85, 2.08, 1.96, 1.81, 2.07, 1.91, 1.79, 1.99,\n",
+    "                 1.97, 1.95, 1.96, 1.93, 1.83, 2.09, 2.02, 2.09, 1.84, 1.86, 1.96, 2.03,\n",
+    "                 1.93, 1.90, 1.94, 1.87, 1.97, 1.91, 1.87, 1.81, 2.06, 2.02, 1.96, 1.81,\n",
+    "                 1.93, 2.03, 1.92, 1.96, 1.80, 1.95, 1.90, 2.02, 2.03, 1.90, 2.03, 2.02,\n",
+    "                 1.96, 1.91, 1.98, 1.87, 1.92, 1.89, 1.84, 2.06, 1.93, 2.06, 1.93, 1.93,\n",
+    "                 1.91, 1.90, 1.92, 1.93, 1.86, 1.83, 1.96, 1.81, 2.03, 1.98, 1.84, 1.86,\n",
+    "                 1.96, 1.81, 1.98, 1.84, 1.86, 1.96, 1.92, 1.96, 1.85, 2.04, 2.00, 1.92,\n",
+    "                 1.90, 2.15, 1.94, 1.92])"
    ]
   },
   {
@@ -582,7 +589,7 @@
    "outputs": [],
    "source": [
     "nbins = 10\n",
-    "xrange = (1.75,2.20)    # ntupla"
+    "xrange = (1.75, 2.20)    # ntupla"
    ]
   },
   {
@@ -703,11 +710,11 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "ax.set_title('g1=x*(x-1)/(x**2+1)-1, g2=(x-1)/(x**2+1)',fontsize='20')\n",
+    "ax.set_title('g1=x*(x-1)/(x**2+1)-1, g2=(x-1)/(x**2+1)', fontsize='20')\n",
     "ax.set_xlabel('x value')\n",
     "ax.set_ylabel('g(x)')\n",
     "ax.grid(True)\n",
-    "ax.margins(x=0.,y=0.05)\n",
+    "ax.margins(x=0., y=0.05)\n",
     "ax.plot(xc, yc1, c='b', label='pippo rules', linestyle = '--');\n",
     "ax.plot(xc, 3*yc2, 'k', label='g2');\n",
     "ax.plot(xc, yc2, c='g');\n",
@@ -737,8 +744,9 @@
     "def f0(t, omega, gamma, tau):\n",
     "    wt = omega*t\n",
     "    f1 = np.sin(wt) + (np.cos(wt)-1.0)/wt\n",
-    "    f2 = 1.0+(gamma/omega)*f1\n",
+    "    f2 = 1.0 + (gamma/omega)*f1\n",
     "    return np.exp(-t*f2/tau)\n",
+    "\n",
     "\n",
     "omega = 12.0\n",
     "gamma = 8.0\n",
@@ -755,7 +763,7 @@
     "#ax.set_xlabel('$t/\\tau\\quad\\rm(ms)}$', fontsize=14)       # r è necessario per questa stringa in cui compare \n",
     "                                                           # il carattere \"\\\" come parte di LaTeX\n",
     "plt.text(1.8, 0.85, r'$\\Gamma(z)=\\int_0^\\infty x^{z-1}e^{-x}dx$', {'color': 'k', 'fontsize': 14})\n",
-    "plt.text(4.0, 0.4, r'$\\Gamma(z)=\\int_0^\\infty x^{z-1}e^{-x}dx$', {'color': 'b', 'fontsize': 20})"
+    "plt.text(4.0, 0.40, r'$\\Gamma(z)=\\int_0^\\infty x^{z-1}e^{-x}dx$', {'color': 'b', 'fontsize': 20})"
    ]
   },
   {
@@ -789,26 +797,27 @@
     "def my_f(x):\n",
     "    return 2*x**3 + 3*x**2 - 12*x -10\n",
     "\n",
-    "xval = np.arange(-4,3,0.1)\n",
+    "\n",
+    "xval = np.arange(-4, 3, 0.1)\n",
     "yval = my_f(xval)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(8,6))\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "\n",
     "ax.set_xlabel('x coordinate')\n",
     "ax.set_ylabel('my_f(x)')\n",
     "ax.set_title('Plot of my_f')\n",
     "ax.grid()\n",
     "\n",
-    "ax.plot(xval,yval);\n",
+    "ax.plot(xval, yval);\n",
     "\n",
     "ax2 = plt.axes([0.3, 0.2, 0.3, 0.2]) # [x_left_lower_corner,y_left_lower_corner,x_width,y_width] \n",
     "                                     # Le coordinate si riferiscono alla intera figura\n",
     "                                     # normalizzate fra 0 e 1\n",
     "\n",
-    "xval2 = np.arange(0,2*np.pi,0.1)\n",
+    "xval2 = np.arange(0, 2*np.pi, 0.1)\n",
     "yval2 = np.cos(xval2)\n",
     "ax2.grid()\n",
-    "ax2.plot(xval2,yval2);\n"
+    "ax2.plot(xval2, yval2);\n"
    ]
   },
   {
@@ -829,7 +838,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raggio = 3.\n",
+    "raggio = 3.0\n",
     "npoints = 100\n",
     "step = 2*np.pi/npoints\n",
     "x0 = raggio*np.array([np.cos(i*step) for i in range(npoints+1)])\n",
@@ -873,25 +882,27 @@
    },
    "outputs": [],
    "source": [
-    "def x_of_t(t,vx0,x0=0.):\n",
+    "def x_of_t(t, vx0, x0=0.):\n",
     "    return vx0*t + x0\n",
     "\n",
-    "def y_of_t(t,vy0,y0=0,g=9.8):\n",
+    "\n",
+    "def y_of_t(t, vy0, y0=0, g=9.8):\n",
     "    return -0.5*t*t + vy0*t +y0\n",
     "\n",
-    "vx0 = 5. \n",
-    "vy0 = 7.\n",
+    "\n",
+    "vx0 = 5.0\n",
+    "vy0 = 7.0\n",
     "tmax = 800\n",
     "times = np.array([t/50 for t in range(tmax+1)])\n",
     "\n",
-    "x = x_of_t(times,vx0)\n",
-    "y = y_of_t(times,vy0)\n",
+    "x = x_of_t(times, vx0)\n",
+    "y = y_of_t(times, vy0)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 12))\n",
     "ax.grid()\n",
-    "ax.set_ylabel(\"y\",{'fontsize':30})\n",
-    "ax.set_xlabel(\"x\",{'fontsize':30})\n",
-    "ax.set_title(\"y(x) free fall\",{'fontsize':40})\n",
+    "ax.set_ylabel(\"y\", {'fontsize':30})\n",
+    "ax.set_xlabel(\"x\", {'fontsize':30})\n",
+    "ax.set_title(\"y(x) free fall\", {'fontsize':40})\n",
     "\n",
     "ax.plot(x, y);"
    ]
@@ -992,13 +1003,6 @@
     "- È consigliato fare un grafico preliminare di una funzione prima di procedere con ulteriori manipolazioni per avere una comprensione visiva iniziale del suo comportamento. \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
