--- a/ipynb/09_numpy_statistics.ipynb
+++ b/ipynb/09_numpy_statistics.ipynb
@@ -49,11 +49,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dati = np.array([1.95,1.96,1.9,1.9,1.84,1.81,2.06,1.99,1.93,1.97,2.02,1.92,1.95,1.88,1.87,2.03,1.85,2.08,1.96,1.81,\n",
-    "                2.07,1.91,1.79,1.99,1.97,1.95,1.96,1.93,1.83,2.09,2.02,2.09,1.84,1.86,1.96,2.03,1.93,1.9,1.94,1.87,\n",
-    "                1.97,1.91,1.87,1.81,2.06,2.02,1.96,1.81,1.93,2.03,1.92,1.96,1.8,1.95,1.9,2.02,2.03,1.9,2.03,2.02,\n",
-    "                1.96,1.9,1.98,1.87,1.9,1.89,1.84,2.06,1.93,2.06,1.93,1.93,1.9,1.9,1.9,1.93,1.86,1.83,1.96,1.81,2.03,\n",
-    "                1.98,1.84,1.86,1.96,1.81,1.98,1.84,1.86,1.96,1.92,1.96,1.85,2.04,2,1.92,1.9,2.15,1.94,1.92])"
+    "dati = np.array([1.95, 1.96, 1.90, 1.91, 1.84, 1.81, 2.06, 1.99, 1.93, 1.97,\n",
+    "                 2.02, 1.92, 1.95, 1.88, 1.87, 2.03, 1.85, 2.08, 1.96, 1.81,\n",
+    "                 2.07, 1.91, 1.79, 1.99, 1.97, 1.95, 1.96, 1.93, 1.83, 2.09,\n",
+    "                 2.02, 2.09, 1.84, 1.86, 1.96, 2.03, 1.93, 1.90, 1.94, 1.87,\n",
+    "                 1.97, 1.91, 1.87, 1.81, 2.06, 2.02, 1.96, 1.81, 1.93, 2.03,\n",
+    "                 1.92, 1.96, 1.80, 1.95, 1.91, 2.02, 2.03, 1.90, 2.03, 2.02,\n",
+    "                 1.96, 1.90, 1.98, 1.87, 1.92, 1.89, 1.84, 2.06, 1.93, 2.06,\n",
+    "                 1.93, 1.93, 1.90, 1.91, 1.90, 1.93, 1.86, 1.83, 1.96, 1.81,\n",
+    "                 2.03, 1.98, 1.84, 1.86, 1.96, 1.81, 1.98, 1.84, 1.86, 1.96,\n",
+    "                 1.92, 1.96, 1.85, 2.04, 2.00, 1.92, 1.90, 2.15, 1.94, 1.92])"
    ]
   },
   {
@@ -298,7 +303,7 @@
    "outputs": [],
    "source": [
     "nbins = 10\n",
-    "xrange = (1.75,2.20)"
+    "xrange = (1.75, 2.20)"
    ]
   },
   {
@@ -316,9 +321,9 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "nevent, bins, patches = ax.hist(dati, nbins, range=xrange)\n",
-    "ax.plot(np.ones(2)*media2,[0,nevent.max()+1],label=\"media\")\n",
-    "ax.plot(np.ones(2)*media2-deviazione_std2,[0,nevent.max()+1],label=\"media - $\\sigma$\")\n",
-    "ax.plot(np.ones(2)*media2+deviazione_std2,[0,nevent.max()+1],label=\"media + $\\sigma$\")\n",
+    "ax.plot(np.ones(2)*media2, [0,nevent.max()+1], label=\"media\")\n",
+    "ax.plot(np.ones(2)*media2-deviazione_std2, [0,nevent.max()+1], label=\"media - $\\sigma$\")\n",
+    "ax.plot(np.ones(2)*media2+deviazione_std2, [0,nevent.max()+1], label=\"media + $\\sigma$\")\n",
     "ax.legend();"
    ]
   },
@@ -450,7 +455,7 @@
    "outputs": [],
    "source": [
     "nbins = 30\n",
-    "xrange = (-5,5)    # ntupla\n",
+    "xrange = (-5, 5)    # ntupla\n",
     "fig, ax = plt.subplots()\n",
     "nevent, bins, patches = ax.hist(m1, nbins, range=xrange)"
    ]
@@ -478,7 +483,7 @@
    "outputs": [],
    "source": [
     "nbins = 300\n",
-    "xrange = (-5,1)    # ntupla\n",
+    "xrange = (-5, 1)    # ntupla\n",
     "fig, ax = plt.subplots()\n",
     "nevent, bins, patches = ax.hist(m2, nbins, range=xrange)"
    ]
@@ -515,7 +520,7 @@
    "outputs": [],
    "source": [
     "nbins = 12\n",
-    "xrange = (-0.1,1.1)    # ntupla\n",
+    "xrange = (-0.1, 1.1)    # ntupla\n",
     "fig, ax = plt.subplots()\n",
     "nevent, bins, patches = ax.hist(m3, nbins, range=xrange)"
    ]
@@ -542,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m4 = rng.integers(0,high=100,size=20)\n",
+    "m4 = rng.integers(0, high=100, size=20)\n",
     "print(m4)"
    ]
   },
@@ -710,11 +715,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace(-3,3,100)\n",
+    "x = np.linspace(-3, 3, 100)\n",
     "y_norm = stats.norm.pdf(x)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(x,y_norm);"
+    "ax.plot(x, y_norm);"
    ]
   },
   {
@@ -757,7 +762,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(x,y_norm_cumulative);"
+    "ax.plot(x, y_norm_cumulative);"
    ]
   },
   {
@@ -784,7 +789,7 @@
    "outputs": [],
    "source": [
     "mu = 1.5\n",
-    "k = np.arange(0,10,1)\n",
+    "k = np.arange(0, 10, 1)\n",
     "n = stats.poisson.pmf(k, mu)"
    ]
   },
@@ -795,7 +800,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(k,n);"
+    "ax.scatter(k, n);"
    ]
   },
   {
