--- a/ipynb/03_Tipi_di_Dati.ipynb
+++ b/ipynb/03_Tipi_di_Dati.ipynb
@@ -489,7 +489,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 1.0; b = 1\n",
+    "a = 1.0\n",
+    "b = 1\n",
     "print(type(a))\n",
     "print(type(b))"
    ]
@@ -520,7 +521,7 @@
     "b = -3\n",
     "print( a > b and b > 0 ) \n",
     "print( a < b or b < 0 )\n",
-    "print( a > b and not b**2 < a )\n"
+    "print( a > b and not b**2 < a )"
    ]
   },
   {
@@ -720,8 +721,8 @@
    "outputs": [],
    "source": [
     "my_str = \"abc\"\n",
-    "print('Il primo carattere di my_str è: ',my_str[0])\n",
-    "print('Il secondo carattere di my_str è: ',my_str[1])"
+    "print('Il primo carattere di my_str è: ', my_str[0])\n",
+    "print('Il secondo carattere di my_str è: ', my_str[1])"
    ]
   },
   {
@@ -738,9 +739,9 @@
    "outputs": [],
    "source": [
     "a = \"Hello Moon\"\n",
-    "print('La lunghezza di \"Hello Moon\" è:',len(a))\n",
+    "print('La lunghezza di \"Hello Moon\" è:', len(a))\n",
     "b = \"\"\n",
-    "print('La lunghezza della stringa vuota è:',len(b))"
+    "print('La lunghezza della stringa vuota è:', len(b))"
    ]
   },
   {
@@ -993,7 +994,7 @@
    "outputs": [],
    "source": [
     "b = \"Stairways to Heaven\"\n",
-    "b = b.replace(\"Heaven\",\"Hell\")\n",
+    "b = b.replace(\"Heaven\", \"Hell\")\n",
     "print(b)"
    ]
   },
@@ -1156,7 +1157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = [1,2]\n",
+    "a = [1, 2]\n",
     "a"
    ]
   },
@@ -1166,7 +1167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = [\"pippo\",3.14,\"pluto\"]\n",
+    "a = [\"pippo\", 3.14, \"pluto\"]\n",
     "a"
    ]
   },
@@ -1187,7 +1188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = ['a','b','c','d','e','f']\n",
+    "a = ['a', 'b', 'c', 'd', 'e', 'f']\n",
     "print(a[1])\n",
     "print(a[2:4])"
    ]
@@ -1222,7 +1223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = [1,2,3]\n",
+    "l = [1, 2, 3]\n",
     "print(l[44])"
    ]
   },
@@ -1326,7 +1327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_nest = [10,[20,21,22],30]\n",
+    "a_nest = [10, [20, 21, 22], 30]\n",
     "print(a_nest)"
    ]
   },
@@ -1370,7 +1371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = [1,3,2]\n",
+    "l = [1, 3, 2]\n",
     "dir(l)"
    ]
   },
@@ -1404,9 +1405,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1=sorted(l)\n",
-    "print('new list:',l1)\n",
-    "print('original list:',l"
+    "l1 = sorted(l)\n",
+    "print('new list:', l1)\n",
+    "print('original list:', l)"
    ]
   },
   {
@@ -1494,7 +1495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(range(3, 10)))            # start=3"
+    "print(list(range(3, 10)))            # start=3, stop=10"
    ]
   },
   {
@@ -1503,7 +1504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(range(3, 10, 2)))         # start=3, step=2"
+    "print(list(range(3, 10, 2)))         # start=3, stop=10, step=2"
    ]
   },
   {
@@ -1512,7 +1513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(range(10, 0, -1)))        # start=10,step=-1"
+    "print(list(range(10, 0, -1)))        # start=10, stop=0, step=-1"
    ]
   },
   {
@@ -1652,7 +1653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(tuple([1,'a']))"
+    "print(tuple([1, 'a']))"
    ]
   },
   {
@@ -1668,7 +1669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ntuples possono anche essere usate per assegnare due valori contemporameamente:"
+    "Le ntuple possono anche essere usate per assegnare due valori contemporameamente:"
    ]
   },
   {
@@ -1694,7 +1695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le ntuple possono essere usate per scambiare due (o pi&ugrave; oggetti in una sola riga di codice. Per esempio:"
+    "Le ntuple possono essere usate per scambiare due (o pi&ugrave;) oggetti in una sola riga di codice. Per esempio:"
    ]
   },
   {
@@ -1722,7 +1723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La nntupla vuota è `()`."
+    "La ntupla vuota è `()`."
    ]
   },
   {
@@ -1748,7 +1749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La notazione per una nntupla contenente un solo valore può, all'inizio, sembrare un po' strana:"
+    "La notazione per una ntupla contenente un solo valore può, all'inizio, sembrare un po' strana:"
    ]
   },
   {
@@ -1791,7 +1792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un esempio dell'immutabilità di una tuple:"
+    "Un esempio dell'immutabilità di una ntupla:"
    ]
   },
   {
@@ -1909,8 +1910,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Il type di '34' è\",type(a))\n",
-    "print(\"Il type di\",x,\" è\",type(a))"
+    "print(\"Il type di '34' è\", type(a))\n",
+    "print(\"Il type di\", x, \" è\", type(a))"
    ]
   },
   {
@@ -2186,10 +2187,10 @@
    "outputs": [],
    "source": [
     "a = \"Hello World!\" \n",
-    "print('a[0]  :',a[0])\n",
-    "print('a[1]  :',a[1])\n",
-    "print('a[-1] :',a[-1])\n",
-    "print('a[-2 ]:',a[-2])"
+    "print('a[0]  :', a[0])\n",
+    "print('a[1]  :', a[1])\n",
+    "print('a[-1] :', a[-1])\n",
+    "print('a[-2 ]:', a[-2])"
    ]
   },
   {
@@ -2205,7 +2206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a[100]:',a[100])"
+    "print('a[100]:', a[100])"
    ]
   },
   {
@@ -2249,8 +2250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a[1:4]:',a[1:4])\n",
-    "print('a[0:6]:',a[0:6])"
+    "print('a[1:4]:', a[1:4])\n",
+    "print('a[0:6]:', a[0:6])"
    ]
   },
   {
@@ -2266,7 +2267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a[0:-1]:',a[0:-1])"
+    "print('a[0:-1]:', a[0:-1])"
    ]
   },
   {
@@ -2282,7 +2283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a[5:len(a)]:',a[5:len(a)])"
+    "print('a[5:len(a)]:', a[5:len(a)])"
    ]
   },
   {
@@ -2300,10 +2301,10 @@
    "source": [
     "a = \"Hello World!\"\n",
     "\n",
-    "print('a[:5]:',a[:5])\n",
-    "print('a[5:]:',a[5:])\n",
-    "print('a[-2:]:',a[-2:])\n",
-    "print('a[:]:',a[:])"
+    "print('a[:5]:', a[:5])\n",
+    "print('a[5:]:', a[5:])\n",
+    "print('a[-2:]:', a[-2:])\n",
+    "print('a[:]:', a[:])"
    ]
   },
   {
@@ -2319,7 +2320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a[::-1]:',a[::-1])"
+    "print('a[::-1]:', a[::-1])"
    ]
   },
   {
@@ -2371,7 +2372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print((1,2,3).index(2))"
+    "print((1, 2, 3).index(2))"
    ]
   },
   {
@@ -2387,7 +2388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print([1,2,3].index(4))"
+    "print([1, 2, 3].index(4))"
    ]
   },
   {
@@ -2718,7 +2719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vlist = [1.2,-0.3,3.5]"
+    "vlist = [1.2, -0.3, 3.5]"
    ]
   },
   {
@@ -3140,12 +3141,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lst = [1,2,3]\n",
-    "print(lst,id(lst))\n",
+    "lst = [1, 2, 3]\n",
+    "print(lst, id(lst))\n",
     "lst[0] = 100\n",
-    "print(lst,id(lst))\n",
+    "print(lst, id(lst))\n",
     "lst.append(44)\n",
-    "print(lst,id(lst))"
+    "print(lst, id(lst))"
    ]
   },
   {
