--- a/ipynb/07_numpy.ipynb
+++ b/ipynb/07_numpy.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.linspace(0,10,101))"
+    "print(np.linspace(0, 10, 101))"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.linspace(-1,1,21)\n",
+    "a = np.linspace(-1, 1, 21)\n",
     "print(a)"
    ]
   },
@@ -182,8 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.logspace(1,4,4))\n",
-    "#np.logspace(1.7,4.4,40)"
+    "print(np.logspace(1, 4, 4))\n",
+    "#np.logspace(1.7, 4.4, 40)"
    ]
   },
   {
@@ -206,8 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array_f = np.array([1,2,3.14], dtype=float)\n",
-    "array_i = np.array([1.,2.2,3], dtype='int16')\n",
+    "array_f = np.array([1, 2, 3.14], dtype=float)\n",
+    "array_i = np.array([1., 2.2, 3], dtype='int16')\n",
     "\n",
     "print(array_f)\n",
     "print(array_i)"
@@ -219,8 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.array([1,2,123456790],dtype='int32'))\n",
-    "print(np.arange(1.3,2.2,0.1,dtype=complex))"
+    "print(np.array([1, 2, 123456790], dtype='int32'))\n",
+    "print(np.arange(1.3, 2.2 ,0.1, dtype=complex))"
    ]
   },
   {
@@ -328,8 +328,8 @@
    "outputs": [],
    "source": [
     "print(x + 10)\n",
-    "print(x*33)\n",
-    "print(x ** 2)"
+    "print(x * 33)\n",
+    "print(x**2)"
    ]
   },
   {
@@ -345,9 +345,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1 = np.array([1.,2.,3.])\n",
-    "y2 = np.array([-1.,-10,+100])\n",
-    "print(y1+y2)"
+    "y1 = np.array([1., 2., 3.])\n",
+    "y2 = np.array([-1., -10, +100])\n",
+    "print(y1 + y2)"
    ]
   },
   {
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.mod(x,6))"
+    "print(np.mod(x, 6))"
    ]
   },
   {
@@ -424,8 +424,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1+1j,2-1j])\n",
-    "b = np.array([1-1j,2-1j])"
+    "a = np.array([1+1j, 2-1j])\n",
+    "b = np.array([1-1j, 2-1j])"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(a*b)"
+    "print(a * b)"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(a+b)"
+    "print(a + b)"
    ]
   },
   {
@@ -461,9 +461,9 @@
    "outputs": [],
    "source": [
     "def myfunc(arr):\n",
-    "    return 3*arr**3 -2*arr*arr +1\n",
+    "    return 3*arr**3 - 2*arr*arr + 1\n",
     "\n",
-    "x = np.linspace(-5,5,101)\n",
+    "x = np.linspace(-5, 5, 101)\n",
     "print(x)\n",
     "res = myfunc(x)\n",
     "print(res)"
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(5,15)\n",
+    "x = np.arange(5, 15)\n",
     "print(x)"
    ]
   },
@@ -518,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = [x[2],x[3],x[5]]\n",
+    "x1 = [x[2], x[3], x[5]]\n",
     "print(x1)\n",
     "type(x1)"
    ]
@@ -554,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ind = [2,3,5]\n",
+    "ind = [2, 3, 5]\n",
     "print(x[ind])       # Restituisce un array"
    ]
   },
@@ -573,7 +573,7 @@
    "source": [
     "x = np.arange(5,11)\n",
     "print(x)\n",
-    "ind = [False,True,True,False,True,False]\n",
+    "ind = [False, True, True, False, True, False]\n",
     "print(x[ind])       # Restituisce l'array degli elementi corrispondenti a `True`"
    ]
   },
@@ -744,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.arange(3,10)\n",
+    "arr = np.arange(3, 10)\n",
     "out = np.where(arr % 2 == 1, -1, arr)  # la costante -1 viene promosso ad un array della lunghezza di arr\n",
     "print(arr)\n",
     "print(out)"
@@ -840,7 +840,7 @@
     "arr = np.array([0, 1, 2, 0, 4, 1, 1, 7])\n",
     "uniqs, counts = np.unique(arr, return_counts=True)\n",
     "print(\"Unique items : \", uniqs)\n",
-    "print(\"      counts : \",counts)"
+    "print(\"      counts : \", counts)"
    ]
   },
   {
@@ -863,8 +863,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1,2,3,3,4,3,4])\n",
-    "b = np.array([7,2,1,2,7,4,4,5,5,5])\n",
+    "a = np.array([1, 2, 3, 3, 4, 3, 4])\n",
+    "b = np.array([7, 2, 1, 2, 7, 4, 4 ,5, 5, 5])\n",
     "\n",
     "print(np.intersect1d(a,b))"
    ]
@@ -882,8 +882,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1,2,3,4,5])\n",
-    "b = np.array([5,6,7,8,9,2,2])\n",
+    "a = np.array([1, 2, 3, 4 ,5])\n",
+    "b = np.array([5, 6, 7 , 8, 9, 2, 2])\n",
     "\n",
     "print(np.setdiff1d(a,b))"
    ]
@@ -901,8 +901,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1,2,3,2,3,3,4,5,6])\n",
-    "b = np.array([7,2,1,2,7,9,4,9,8])\n",
+    "a = np.array([1, 2, 3, 2, 3, 3, 4, 5, 6])\n",
+    "b = np.array([7, 2, 1, 2, 7, 9, 4, 9, 8])\n",
     "\n",
     "print(np.where(a == b))"
    ]
@@ -940,7 +940,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array([1,3,2])\n",
+    "x = np.array([1, 3, 2])\n",
     "y = np.sort(x)\n",
     "print(y)\n",
     "print(x)"
@@ -1047,6 +1047,7 @@
     "    for i in range(N):\n",
     "        a1[i] = float(i)**2  # passare a numeri reali rende l'operazione più veloce \n",
     "    return sum(a1)\n",
+    "\n",
     "\n",
     "def numpymethod(N):\n",
     "    a3 = np.sum(np.arange(0, N)**2, dtype='d')  # dtype = 'd' vuol dire double precision\n",
@@ -1178,12 +1179,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=np.array([[1, 2, 3], [4, 5, 6],[7,8,9]])\n",
+    "x = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
     "\n",
-    "print(\"0,0 :\",x[0, 0])\n",
-    "print(\"0,1 :\",x[0, 1])\n",
-    "print(\"0,2 :\",x[0, 2])\n",
-    "print(\"1,0 :\",x[1, 0])"
+    "print(\"0,0 :\", x[0, 0])\n",
+    "print(\"0,1 :\", x[0, 1])\n",
+    "print(\"0,2 :\", x[0, 2])\n",
+    "print(\"1,0 :\", x[1, 0])"
    ]
   },
   {
@@ -1199,7 +1200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"colonna 0 :\",x[:, 0])  # l'indice della colonna &egrave; fissato"
+    "print(\"colonna 0 :\", x[:, 0])  # l'indice della colonna &egrave; fissato"
    ]
   },
   {
@@ -1208,7 +1209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"riga 1 :\",x[1,:])      # l'indice della riga &egrave; fissato"
+    "print(\"riga 1 :\", x[1, :])      # l'indice della riga &egrave; fissato"
    ]
   },
   {
@@ -1224,7 +1225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x[[0,1],:])"
+    "print(x[[0, 1], :])"
    ]
   },
   {
@@ -1233,7 +1234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x[np.arange(1,3),:])"
+    "print(x[np.arange(1, 3), :])"
    ]
   },
   {
@@ -1249,7 +1250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[1,0] = 157\n",
+    "x[1, 0] = 157\n",
     "print(x)"
    ]
   },
@@ -1269,11 +1270,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.zeros((3,3))\n",
+    "A = np.zeros((3, 3))\n",
     "print(A)\n",
-    "vec = np.array([-2,5,1])\n",
-    "indices = np.array([0,1,2])\n",
-    "A[indices,indices] = vec\n",
+    "vec = np.array([-2, 5, 1])\n",
+    "indices = np.array([0, 1, 2])\n",
+    "A[indices, indices] = vec\n",
     "print(A)"
    ]
   },
@@ -1290,11 +1291,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.zeros((4,4))\n",
-    "ind_row = np.array([0,2])\n",
-    "ind_col = np.array([1,3])\n",
-    "vec1  = np.array([5,1])\n",
-    "A[ind_row,ind_col] = vec1\n",
+    "A = np.zeros((4, 4))\n",
+    "ind_row = np.array([0, 2])\n",
+    "ind_col = np.array([1, 3])\n",
+    "vec1  = np.array([5, 1])\n",
+    "A[ind_row, ind_col] = vec1\n",
     "print(A)"
    ]
   },
@@ -1394,7 +1395,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import numpy.random       \n",
+    "import numpy.random\n",
     "A = numpy.random.rand(5, 5)    # genera matrice random 5 by 5 \n",
     "x = numpy.random.rand(5)       # genera un vettore di 5 elementi\n",
     "print(A)"
@@ -1415,7 +1416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=np.dot(A, x)                  # multiplica la matrice A per il vettore x \n",
+    "b = np.dot(A, x)                  # multiplica la matrice A per il vettore x \n",
     "print(b)"
    ]
   },
@@ -1432,8 +1433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M1 = np.array([[0,1],[1,2]])\n",
-    "M2 = np.array([[1,0],[0,-1]])"
+    "M1 = np.array([[0, 1], [1, 2]])\n",
+    "M2 = np.array([[1, 0], [0, -1]])"
    ]
   },
   {
@@ -1442,7 +1443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.matmul(M1,M2))"
+    "print(np.matmul(M1, M2))"
    ]
   },
   {
@@ -1487,7 +1488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.dot(A,x))\n",
+    "print(np.dot(A, x))\n",
     "print(b)"
    ]
   },
@@ -1584,7 +1585,7 @@
     "import numpy.linalg as LA\n",
     "import numpy as np\n",
     "\n",
-    "R = np.array([[1,2,3], [1,0,1], [0,1,2]])"
+    "R = np.array([[1, 2, 3], [1, 0, 1], [0, 1, 2]])"
    ]
   },
   {
@@ -1660,7 +1661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A1=evectors[:,0]\n",
+    "A1 = evectors[:, 0]\n",
     "print(A1)"
    ]
   },
@@ -1670,7 +1671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.dot(R,A1))"
+    "print(np.dot(R, A1))"
    ]
   },
   {
@@ -1705,7 +1706,7 @@
     "X = np.array(\n",
     "[[6, 3, 7],\n",
     " [2, 6, 4],\n",
-    " [7, 2, 5]] \n",
+    " [7, 2, 5]]\n",
     ")"
    ]
   },
@@ -1786,7 +1787,8 @@
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
-    "    \n",
+    "\n",
+    "\n",
     "print(Theta(0.3))"
    ]
   },
@@ -1803,7 +1805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Theta((1,2))"
+    "Theta((1, 2))"
    ]
   },
   {
@@ -1812,7 +1814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Theta(np.array([-3,-2,-1,0,1,2,3]))"
+    "Theta(np.array([-3, -2, -1, 0, 1, 2, 3]))"
    ]
   },
   {
@@ -1837,7 +1839,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = Theta_vec(np.array([-3,-2,-1,0,1,2,3]))\n",
+    "v = Theta_vec(np.array([-3, -2, -1, 0, 1, 2, 3]))\n",
     "print(v)"
    ]
   },
@@ -1854,7 +1856,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1,2,3])\n",
+    "a = np.array([1, 2, 3])\n",
     "b = a\n",
     "a[2] = 22"
    ]
@@ -1865,15 +1867,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a :',a)\n",
-    "print('b :',b)"
+    "print('a :', a)\n",
+    "print('b :', b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La copia con [:] non è sufficiente a creare una deep copy"
+    "La copia con [:] non è sufficiente a creare una copia indipendente:"
    ]
   },
   {
@@ -1882,7 +1884,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([1,2,3])\n",
+    "a = np.array([1, 2, 3])\n",
     "b = a[:]\n",
     "a[2] = 22"
    ]
@@ -1893,15 +1895,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a :',a)\n",
-    "print('b :',b)"
+    "print('a :', a)\n",
+    "print('b :', b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bisogna usare la funzione deepcopy nlla libreria `copy`."
+    "Bisogna usare la funzione deepcopy nella libreria `copy`."
    ]
   },
   {
@@ -1911,7 +1913,7 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "a = np.array([1,2,3])\n",
+    "a = np.array([1, 2, 3])\n",
     "b = copy.deepcopy(a)\n",
     "a[2] = 22"
    ]
@@ -1922,8 +1924,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('a :',a)\n",
-    "print('b :',b)"
+    "print('a :', a)\n",
+    "print('b :', b)"
    ]
   },
   {
@@ -1980,7 +1982,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "dataPt, time, height, error = np.loadtxt( \"../Data/CadutaLiberaDati.txt\", skiprows=5 , unpack=True)"
+    "dataPt, time, height, error = np.loadtxt( \"../Data/CadutaLiberaDati.txt\", skiprows=5, unpack=True)"
    ]
   },
   {
@@ -2012,7 +2014,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataPt, time, height, error = np.loadtxt(\"../Data/CadutaLiberaDati.csv\", skiprows=5 , unpack=True, delimiter=',')"
+    "dataPt, time, height, error = np.loadtxt(\"../Data/CadutaLiberaDati.csv\", skiprows=5, unpack=True, delimiter=',')"
    ]
   },
   {
@@ -2028,7 +2030,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gender, weight, age = np.loadtxt(\"../Data/mixed_data.txt\", skiprows=2 , unpack=True, dtype=str)\n",
+    "gender, weight, age = np.loadtxt(\"../Data/mixed_data.txt\", skiprows=2, unpack=True, dtype=str)\n",
     "print(gender)\n",
     "print(weight)\n",
     "print(age)"
@@ -2074,9 +2076,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.genfromtxt(\"../Data/mixed_data.txt\", skip_header=2 , dtype=None, encoding=None,\n",
+    "data = np.genfromtxt(\"../Data/mixed_data.txt\", skip_header=2, dtype=None, encoding=None,\n",
     "              names=('gender', 'weight', 'age'))\n",
-    "print(\"data imported from mixed_data.txt\\n\",data"
+    "print(\"data imported from mixed_data.txt\\n\", data)"
    ]
   },
   {
@@ -2155,9 +2157,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = [1,2,3]\n",
-    "l2 = ['a','b','c']\n",
-    "print(list(zip(l1,l2)))"
+    "l1 = [1, 2, 3]\n",
+    "l2 = ['a', 'b', 'c']\n",
+    "print(list(zip(l1, l2)))"
    ]
   },
   {
@@ -2175,7 +2177,7 @@
    "source": [
     "l1 = 'pippo'\n",
     "l2 = 'pluto'\n",
-    "print(list(zip(l1,l2)))"
+    "print(list(zip(l1, l2)))"
    ]
   },
   {
@@ -2184,9 +2186,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = [1,2,3,4,5]\n",
+    "l1 = [1, 2, 3, 4, 5]\n",
     "l2 = 'pluto'\n",
-    "print(list(zip(l1,l2)))"
+    "print(list(zip(l1, l2)))"
    ]
   },
   {
@@ -2202,8 +2204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2 =['a']\n",
-    "print(list(zip(l1,l2)))"
+    "l2 = ['a']\n",
+    "print(list(zip(l1, l2)))"
    ]
   },
   {
@@ -2283,13 +2285,6 @@
     "- Differenza tra la copia di riferimenti di array (copia shallow) e la creazione di copie indipendenti (copia deep). Uso di `copy.deepcopy`.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
