--- a/ipynb/10_scipy.ipynb
+++ b/ipynb/10_scipy.ipynb
@@ -275,6 +275,7 @@
     "def f_N(x):\n",
     "    return np.exp(np.cos(-2 * x * np.pi))\n",
     "\n",
+    "\n",
     "res, err = quad(f_N, -2, 2)\n",
     "print(f\"The numerical result is {res:f} (+-{err:g})\")"
    ]
@@ -302,6 +303,7 @@
     "def my_f(x):\n",
     "    return 1/x/x\n",
     "\n",
+    "\n",
     "res, err = quad(my_f, 1, np.inf)\n",
     "print(f\"The numerical result is {res:f} (+-{err:g})\")"
    ]
@@ -325,14 +327,14 @@
    "source": [
     "from scipy.integrate import quad\n",
     "\n",
-    "def vel(t,v0):\n",
+    "def vel(t, v0):\n",
     "    g = -9.81\n",
     "    return g*t + v0\n",
     "\n",
     "v0 = 10  # m/s\n",
     "tf = 3  # s\n",
     "\n",
-    "y,err = quad(vel,0,tf,args=(v0,))\n",
+    "y, err = quad(vel, 0, tf, args=(v0,))\n",
     "print(f\"La posizione di un corpo che parte dall'origine con v0={v0} dopo {tf} secondi è {y} m\")   "
    ]
   },
@@ -352,8 +354,9 @@
     "def inv_square_root(x):\n",
     "    return 1./np.sqrt(x)\n",
     "\n",
-    "res,err = quad(inv_square_root,0,1)\n",
-    "res,err "
+    "\n",
+    "res, err = quad(inv_square_root, 0, 1)\n",
+    "res, err "
    ]
   },
   {
@@ -372,7 +375,8 @@
     "def inv(x):\n",
     "    return 1./x\n",
     "\n",
-    "res,err = quad(inv,0,1)\n",
+    "\n",
+    "res, err = quad(inv, 0, 1)\n",
     "res"
    ]
   },
@@ -409,7 +413,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "def my_trapz(f,a,b,N=50):\n",
+    "def my_trapz(f, a, b, N=50):\n",
     "    '''Approximate the integral of f(x) from a to b by the trapezoid rule.\n",
     "\n",
     "    The trapezoid rule approximates the integral \\int_a^b f(x) dx by the sum:\n",
@@ -436,7 +440,7 @@
     "    >>> my_trapz(np.sin,0,np.pi/2,1000)\n",
     "    0.9999997943832332\n",
     "    '''\n",
-    "    x = np.linspace(a,b,N+1) # N+1 points make N subintervals\n",
+    "    x = np.linspace(a, b, N+1) # N+1 points make N subintervals\n",
     "    y = f(x)\n",
     "    y_right = y[1:] # right endpoints\n",
     "    y_left = y[:-1] # left endpoints\n",
@@ -454,7 +458,8 @@
     "def vf(x):\n",
     "    return np.exp(np.cos(-2 * x * np.pi))\n",
     "\n",
-    "res1 = my_trapz(vf,-2,2)\n",
+    "\n",
+    "res1 = my_trapz(vf, -2, 2)\n",
     "print(f\"The numerical result is {res1:f}\")"
    ]
   },
@@ -488,9 +493,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace(-2,2,101)\n",
+    "x = np.linspace(-2, 2, 101)\n",
     "y = vf(x)\n",
-    "res2 = trapezoid(y,x)\n",
+    "res2 = trapezoid(y, x)\n",
     "res2"
    ]
   },
@@ -515,9 +520,11 @@
    "source": [
     "def my_f(x):\n",
     "    return np.sin(x)/(x-1.)\n",
-    "x = np.linspace(0.5,2.,251)\n",
+    "\n",
+    "\n",
+    "x = np.linspace(0.5, 2., 251)\n",
     "y = my_f(x)\n",
-    "res = scipy.integrate.trapezoid(y,x)\n",
+    "res = scipy.integrate.trapezoid(y, x)\n",
     "res"
    ]
   },
@@ -547,9 +554,9 @@
     }
    ],
    "source": [
-    "x = np.linspace(0.5,2.,237)\n",
+    "x = np.linspace(0.5, 2., 237)\n",
     "y = my_f(x)\n",
-    "res = scipy.integrate.trapezoid(y,x)\n",
+    "res = scipy.integrate.trapezoid(y, x)\n",
     "res"
    ]
   },
@@ -578,9 +585,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace(-2,2,101)\n",
+    "x = np.linspace(-2, 2, 101)\n",
     "y = vf(x)\n",
-    "res2 = simpson(y,x)\n",
+    "res2 = simpson(y, x)\n",
     "res2"
    ]
   },
@@ -653,7 +660,7 @@
     "\n",
     "import matplotlib.pyplot as plt         # plotting of results\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(t,y)\n",
+    "ax.plot(t, y)\n",
     "ax.set_xlabel('t')\n",
     "ax.set_ylabel('y(t)')"
    ]
@@ -695,8 +702,8 @@
     "    '''\n",
     "    y = np.zeros(len(t))\n",
     "    y[0] = y0\n",
-    "    for n in range(0,len(t)-1):\n",
-    "        y[n+1] = y[n] + f(y[n],t[n])*(t[n+1] - t[n])\n",
+    "    for n in range(0, len(t)-1):\n",
+    "        y[n+1] = y[n] + f(y[n], t[n])*(t[n+1] - t[n])\n",
     "    return y\n"
    ]
   },
@@ -706,7 +713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_E = odeEuler(f,y0,t)"
+    "y_E = odeEuler(f, y0, t)"
    ]
   },
   {
@@ -717,8 +724,8 @@
    "source": [
     "import matplotlib.pyplot as plt         # plotting of results\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(t,y,label='sol by odeint')\n",
-    "ax.plot(t,y_E,c='r',label='sol by odeEuler')\n",
+    "ax.plot(t, y, label='sol by odeint')\n",
+    "ax.plot(t, y_E, c='r', label='sol by odeEuler')\n",
     "ax.set_xlabel('t')\n",
     "ax.set_ylabel('y(t)')\n",
     "ax.legend()"
@@ -1050,6 +1057,7 @@
     "def f(x):\n",
     "    return x ** 3 - 2 * x ** 2\n",
     "\n",
+    "\n",
     "xstart = 3\n",
     "x = fsolve(f, xstart)      # one root is at x=2.0\n",
     "                           # search starts at x=3\n",
@@ -1135,11 +1143,11 @@
     "print(f\"Optimal parameters are af={af:g}, bf={bf:g}, and cf={cf:g}.\")\n",
     "\n",
     "# best fit curve\n",
-    "yfitted = f(x,af,bf,cf)\n",
+    "yfitted = f(x, af, bf, cf)\n",
     "\n",
     "#plot\n",
     "import matplotlib.pyplot as plt\n",
-    "fig, ax = plt.subplots(figsize=(6,4))\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "ax.scatter(x, yi, marker='o', label='data $y_i$')\n",
     "ax.plot(x, yfitted, c='r', label='fit $f(x_i)$')\n",
     "ax.set_xlabel('x')\n",
@@ -1246,11 +1254,11 @@
     "x = np.arange(-10, 10, 0.1)\n",
     "y = f(x)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(6,4))\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "ax.set_xlabel('x')\n",
-    "ax.grid(visible=True,which='both')\n",
-    "ax.set_xlim(-5.,5.)\n",
-    "ax.set_ylim(-2.2,0.5)\n",
+    "ax.grid(visible=True, which='both')\n",
+    "ax.set_xlim(-5., 5.)\n",
+    "ax.set_ylim(-2.2, 0.5)\n",
     "\n",
     "ax.plot(x, y, label='$\\cos(x)-3e^{-(x-0.2)^2}$')"
    ]
@@ -1279,9 +1287,9 @@
     "x = np.arange(-10, 10, 0.1)\n",
     "y = f(x)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(6,4))\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "ax.set_xlabel('x')\n",
-    "ax.grid(visible=True,which='both')\n",
+    "ax.grid(visible=True, which='both')\n",
     "ax.set_xlim(-5.,5.)\n",
     "ax.set_ylim(-2.2,0.5)\n",
     "\n",
@@ -1292,9 +1300,9 @@
     "ax.scatter(1.0, f(1.0), marker='o', c='r', label='start 1')\n",
     "\n",
     "# add minimum2 to plot\n",
-    "ax.scatter(minimum2,f(minimum2), marker='v', c='g', label='minimum 2')\n",
+    "ax.scatter(minimum2, f(minimum2), marker='v', c='g', label='minimum 2')\n",
     "# add start2 to plot\n",
-    "ax.scatter(2.0,f(2.0), marker='o', c='g',label='start 2')\n",
+    "ax.scatter(2.0, f(2.0), marker='o', c='g', label='start 2')\n",
     "\n",
     "ax.legend(loc='lower left')"
    ]
